# old_sources

./: README
Asm/: sample.asm
Asm/masmProj/: Project.asm  Project.inc  makeit.bat
C#/Commander/: Commander.csproj  Commander.sln  Form1.cs  Form1.resx  Options.cs  Options.resx
C#/DB_Prog/: DB_Prog.csproj  DB_Prog.sln  DataSet1.cs  DataSet1.xsd  DataSet1.xsx  Form1.cs  Form1.resx
C#/DesktopMngr/: AssemblyInfo.cs  DesktopMngr.csproj  DesktopMngr.sln  Form1.cs  Form1.resx  Icon.psd  app.config
C#/FileOper/: FileOper.csproj  FileOper.sln  Form1.cs
C#/Game/PMan/: Form1.cs  Form1.resx  Options.cs  PMan.csproj  PMan.sln  Progect Stat.txt
C#/Game/SeaWarAdv/: Form1.cs  SeaWar.csproj  XO.sln
C#/Game/XO/: Form1.cs  Form1.resx  XO.csproj  XO.sln
C#/Get Servises/: Get Servises.csproj  Get Servises.sln  Main.cs
C#/ImageViewer v1.0/: Form1.cs  ImageViewer.csproj  ImageViewer.sln  TextFile1.txt
C#/SeaWarAdv/: Form1.cs  SeaWarAdv.csproj  SeaWarAdv.sln  Ship.cs
C++/: config.ini
C++/DesktopManager/: .cvsignore  BUGS  DesktopManager.aps  DesktopManager.cpp  DesktopManager.h  DesktopManager.ncb  DesktopManager.rc  DesktopManager.sln  DesktopManager.vcproj  MainDlg.cpp  MainDlg.h  config.ini  resource.h  stdafx.cpp  stdafx.h  xImage.h
C++/DesktopManager/Cimg/: ximage.h  ximagif.h  ximaico.h  ximaj2k.h  ximajas.h  ximajbg.h  ximajpg.h  ximamng.h  ximapcx.h  ximapng.h  ximatga.h  ximatif.h
C++/Lab 4.2/: Data.txt  Lab 4.2.aps  Lab 4.2.cpp  Lab 4.2.rc  Lab 4.2.sln  Lab 4.2.vcproj  ReadMe.txt  data.h  resource.h  stdafx.cpp
C++/Pman/: Pman.aps  Pman.cpp  Pman.rc  Pman.sln  Pman.vcproj  ReadMe.txt  resource.h  stdafx.cpp
Swar2/: Swar v 2.25 VC7.rar  Swar2.cpp  Swar2.ncb  Swar2.rar  Swar2.vcproj
cximage/Lib/: Jpeg.lib  Tiff.lib  cximage.lib  png.lib  zlib.lib
db/: FirstBD.mdb
db/DBSample/: DBSample.csproj  DBSample.sln  DataSet1.cs  DataSet1.xsd  Form1.cs  Form1.resx
finished/Max/: MOUSE.TPU  OpenGl.cpp
ogl/: Main.cpp  OGL.ncb  OGL.sln  OGL.vcproj
ogl/Debug/: BuildLog.htm
ogl/Release/: BuildLog.htm
theLibrary/: BUGS  TODO  UPDATING
theLibrary/include/: Compress.h  File.h  Macros.h  SWCommandLine.h  SWLists.h  SWPtrArray.h  TheLibrary.h  Thread.h  UniversalText.h  swConfig.h  swDirectory.h  swINIworks.h  swMap.h  swNotify.h  swRanges.h  swStreamOnFile.h  swStreamOnHeap.h  swregkey.h
theLibrary/src/: .cvsignore  Compress.cpp  File.cpp  Readme.txt  SWCommandLine.cpp  SWPtrArray.cpp  StdAfx.cpp  StdAfx.h  TheLibrary.cpp  TheLibrary.dep  TheLibrary.dsp  TheLibrary.dsw  TheLibrary.mak  TheLibrary.opt  TheLibrary.plg  TheLibrary.sln  TheLibrary.vcproj  UniversalText.cpp  swConfig.cpp  swDirectory.cpp  swINIworks.cpp  swStreamOnFile.cpp  swStreamOnHeap.cpp
xcom/Maps/: Thumbs.db
xcom/xcomeu3d/: CONCEPTS.html
xcom/xcomeu3d/app/: .cvsignore  AUTHORS  COPYING  ChangeLog  Makefile.am  README  bootstrap  configure.in  neoengine.cfg  xcomeu3d.doxygen  xcomeu3d.sln  xcomeu3d.vcproj
xcom/xcomeu3d/app/src/: Makefile.am  application.cpp  application.h  base.h  error.cpp  error.h  main.cpp  systeminput.cpp  systeminput.h  xcomeu3d.cpp  xcomeu3d.h
(+236 files in other folders)
